--- a/css/style.css
+++ b/css/style.css
@@ -224,7 +224,7 @@ html {
 	height: 600px;
 	float: right;
 	position: relative;
-	background-image: url("../images/website.png");
+	background-image: url("../images/website.PNG");
 	background-size: cover;
 }
 
