--- a/css/style.css
+++ b/css/style.css
@@ -416,7 +416,7 @@ html {
 	background-image: url("../images/CONTACTIMAGE.jpg");
 	background-repeat: no-repeat;
 	background-position: center;
-
+	background-size: cover;
 }
 
 /* FOOTER */
